--- a/index.html
+++ b/index.html
@@ -260,26 +260,34 @@
             <h2>contact me</h2>
           </div> <!-- page header -->
           <div class="col-md-6" id="contact-form">
-            <form class="form-horizontal">
+            <form class="form-horizontal" role="form" method="post" action="contact.php">
               <div class="form-group">
                 <label class="control-label col-sm-2" for="name">Name:</label>
                 <div class="col-sm-10">
-                  <input type="text" class="form-control" id="contact-name">
+                  <input type="text" class="form-control" id="name">
+                  <?php echo "<p class='text-danger'>$errName</p>";?>
                 </div>
               </div><!-- form group for name -->
               <div class="form-group">
                 <label class="control-label col-sm-2" for="email">Email:</label>
                 <div class="col-sm-10">
                   <input type="email" class="form-control" id="email">
+                  <?php echo "<p class='text-danger'>$errEmail</p>";?>
                 </div>
               </div><!-- form group for email -->
               <div class="form-group">
                 <label class="control-label col-sm-2" for="message">Message:</label>
                 <div class="col-sm-10">
                   <textarea class="form-control" id="message" rows="4" name="message"></textarea>
+                  <?php echo "<p class='text-danger'>$errMessage</p>";?>
                 </div>
               </div><!-- form group for message -->
               <button type="submit" class="btn btn-default">Send</button>
+              <div class="form-group">
+                <div class="col-sm-10 col-sm-offset-2">
+                  <?php echo $result; ?>  
+                </div>
+              </div>
             </form>
           </div> <!-- div 6 columns -->
           <div class="col-md-6" id="contact-text">
