--- a/index.html
+++ b/index.html
@@ -262,28 +262,26 @@
           <div class="col-md-6" id="contact-form">
             <form class="form-horizontal" role="form" method="post" action="https://formspree.io/nadclputri@gmail.com">
               <div class="form-group">
-                <label class="control-label col-sm-2" for="name">Name:</label>
-                <div class="col-sm-10">
-                  <input type="text" class="form-control" id="name" name="name" placeholder="First & Last Name">
-                </div>
-              </div><!-- form group for name -->
-              <div class="form-group">
-                <label class="control-label col-sm-2" for="email">Email:</label>
-                <div class="col-sm-10">
-                  <input type="email" class="form-control" id="email" name="email" placeholder="example@domain.com">
-              </div><!-- form group for email -->
-              <div class="form-group">
-                <label class="control-label col-sm-2" for="message">Message:</label>
-                <div class="col-sm-10">
-                  <textarea class="form-control" rows="4" name="message"></textarea>
-                </div>
-              </div><!-- form group for message -->
-              <button type="submit" class="btn btn-default">Send</button>
-              <div class="form-group">
-                <div class="col-sm-10 col-sm-offset-2">
-                </div>
+              <label class="control-label col-sm-2" for="name">Name:</label>
+              <div class="col-sm-10">
+                <input type="text" class="form-control" id="contact-name">
               </div>
-            </form>
+            </div><!-- form group for name -->
+            <div class="form-group">
+              <label class="control-label col-sm-2" for="email">Email:</label>
+              <div class="col-sm-10">
+                <input type="email" class="form-control" id="email">
+              </div>
+            </div><!-- form group for email -->
+            <div class="form-group">
+              <label class="control-label col-sm-2" for="message">Message:</label>
+              <div class="col-sm-10">
+                <textarea class="form-control" id="message" rows="4" name="message"></textarea>
+              </div>
+            </div><!-- form group for message -->
+            <button type="submit" class="btn btn-default">Send</button>
+          </form>
+          
           </div> <!-- div 6 columns -->
           <div class="col-md-6" id="contact-text">
             <p>Hello! If you want to contact me about work opportunities, comments, or anything else, fill in the contact form or shoot me an email, and I will get back to you as soon as possible.</p>
