--- a/index.html
+++ b/index.html
@@ -264,13 +264,13 @@
               <div class="form-group">
               <label class="control-label col-sm-2" for="name">Name:</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" id="contact-name">
+                <input type="text" class="form-control" id="contact-name" name="name">
               </div>
             </div><!-- form group for name -->
             <div class="form-group">
               <label class="control-label col-sm-2" for="email">Email:</label>
               <div class="col-sm-10">
-                <input type="email" class="form-control" id="email">
+                <input type="email" class="form-control" id="email" name="_replyto">
               </div>
             </div><!-- form group for email -->
             <div class="form-group">
