Fix url to link to the correct directory

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     
     <!-- Links to external stylesheets -->
-    <link rel="stylesheet" href="/styles/page.css">
-    <link rel="stylesheet" href="/scripts/page.js">
+    <link rel="stylesheet" href="styles/page.css">
+    <link rel="stylesheet" href="scripts/page.js">
     
 
   </head>
@@ -54,7 +54,7 @@
       <div class="container">
         <div id="home" class="row">
           <div class="col-lg-12">
-            <img src="/images/portfolioLogoLarge.png" alt="logo showing Nadia Putri written next to letter NP in a box, with Web Developer & Designer written below it" class="img-responsive center-block">
+            <img src="images/portfolioLogoLarge.png" alt="logo showing Nadia Putri written next to letter NP in a box, with Web Developer & Designer written below it" class="img-responsive center-block">
             <div class="skills clearfix">
               <a href="#/" data-toggle="popover" data-trigger="focus" title="graphic design" data-content="mainly using Adobe Suit, such as Photoshop, Illustrator and inDesign" data-placement="bottom">graphic design</a>
               <div id="design" class="box pull-right"></div>
@@ -85,7 +85,7 @@
           </div><!-- page header -->
 
           <div class="col-md-6">
-            <img src="/images/portfolioAbout.jpg" alt="Photo of Nadia Putri" class="img-responsive img-circle">
+            <img src="images/portfolioAbout.jpg" alt="Photo of Nadia Putri" class="img-responsive img-circle">
           </div><!-- div 6 columns -->
 
           <div class="col-md-6">
