--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
     <!-- Links to Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
+    <!-- Scripts -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="scripts/page.js"></script>
     
     <!-- Links to external stylesheets -->
     <link rel="stylesheet" href="styles/page.css">
-    <link rel="stylesheet" href="scripts/page.js">
-    
 
   </head>
 
   <body data-spy="scroll" data-target=".navbar" data-offset="200">
     <div class="page-container">
-      <nav role="navigation" class="navbar navbar-light navbar-toggleable-md navbar-fixed-top">
+      <!-- <nav role="navigation" class="navbar navbar-toggleable-md navbar-fixed-top">
         <div class="container-fluid">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navmenu">
@@ -35,10 +35,10 @@
               <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="#">
-              <img src="https://dl.dropboxusercontent.com/s/i769joqeaphphwr/portfolioLogoSmall.png" alt="logo showing letter NP in a rectangle box">
+              <img src="images/portfolioLogoSmall.png" alt="logo showing letter NP in a rectangle box">
             </a>
-          </div> <!-- navbar-header -->
-
+          </div> <! navbar-header --> -->
+<!--
           <div id="navmenu" class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
               <li><a href="#home">home</a></li>
@@ -46,8 +46,19 @@
               <li><a href="#portfolio">portfolio</a></li>
               <li><a href="#contact">contact</a></li>
             </ul>
+          </div><! navbar-collapse 
+        </div><! navigation container-fluid 
+      </nav>-->
+
+      <nav role="navigation">
+          <div id="sidenav" class="sidenav">
+              <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+              <a href="#home">home</a>
+              <a href="#about">about</a>
+              <a href="#portfolio">portfolio</a>
+              <a href="#contact">contact</a>
           </div><!-- navbar-collapse -->
-        </div><!-- navigation container-fluid -->
+        <span class="nav-button navbar-right" onclick="openNav()">&#9776; open</span>
       </nav>
 
 
