--- a/index.html
+++ b/index.html
@@ -25,32 +25,7 @@
 
   <body data-spy="scroll" data-target=".navbar" data-offset="200">
     <div class="page-container">
-      <!-- <nav role="navigation" class="navbar navbar-toggleable-md navbar-fixed-top">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navmenu">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">
-              <img src="images/portfolioLogoSmall.png" alt="logo showing letter NP in a rectangle box">
-            </a>
-          </div> <! navbar-header --> -->
-<!--
-          <div id="navmenu" class="collapse navbar-collapse">
-            <ul class="nav navbar-nav navbar-right">
-              <li><a href="#home">home</a></li>
-              <li><a href="#about">about</a></li>
-              <li><a href="#portfolio">portfolio</a></li>
-              <li><a href="#contact">contact</a></li>
-            </ul>
-          </div><! navbar-collapse 
-        </div><! navigation container-fluid 
-      </nav>-->
-
-      <nav role="navigation">
+      <nav role="navigation" class="navbar navbar-fixed-top">
           <div id="sidenav" class="sidenav">
               <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
               <a href="#home">home</a>
@@ -58,7 +33,7 @@
               <a href="#portfolio">portfolio</a>
               <a href="#contact">contact</a>
           </div><!-- navbar-collapse -->
-        <span class="nav-button navbar-right" onclick="openNav()">&#9776; open</span>
+        <span class="nav-button navbar-right" onclick="openNav()">&#9776; menu</span>
       </nav>
 
 
