--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
-            <img src="images/portfolioLogoLarge.png" alt="logo showing Nadia Putri written next to letter NP in a box, with Web Developer and Designer written below it" class="img-responsive center-block">
+            <img src="images/logo-large.png" alt="logo showing Nadia Putri written next to letter NP in a box, with Web Developer and Designer written below it" class="img-responsive center-block">
             <div id="home-social">
               <a href="https://www.linkedin.com/in/nadiaclputri/" target="_blank"><i class="fab fa-linkedin fa-5x"></i></a>
               <a href="http://github.com/nadclputri/" target="_blank"><i class="fab fa-github-square fa-5x"></i></a>
