Update linkt o images

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <h2 class="page-header">about</h2>
 
           <div class="col-md-6">
-            <img src="images/portfolioAbout.jpg" alt="Photo of Nadia Putri" class="img-responsive img-circle">
+            <img src="images/about-me.jpg" alt="Photo of Nadia Putri" class="img-responsive img-circle">
           </div><!-- div 6 columns -->
 
           <div class="col-md-6">
