Fix broken links

--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
 
 
       <div class="container">
-        <div class="row">
+        <div id="home" class="row">
           <div class="col-lg-12">
             <img src="images/logo-large.png" alt="logo showing Nadia Putri written next to letter NP in a box, with Web Developer and Designer written below it" class="img-responsive center-block">
             <div id="home-social">
               <a href="https://www.linkedin.com/in/nadiaclputri/" target="_blank"><i class="fab fa-linkedin fa-5x"></i></a>
               <a href="http://github.com/nadclputri/" target="_blank"><i class="fab fa-github-square fa-5x"></i></a>
-              <a href="mailto:nadclputri@gmail.com" target="_blank"><i class="fas fa-envelope-square fa-5x"></i></a>
+              <a href="mailto:nadclputri@gmail.com"><i class="fas fa-envelope-square fa-5x"></i></a>
             </div>
               <a href="#projects" id="home-to-project">>> view projects</a>
           </div> <!-- column for home section -->
@@ -85,7 +85,7 @@
           <!-- projects content for Enable website -->
           <a href="#"><img src="images/works-colour/enableSite.jpg" alt="Image of website for the company Enable" class="img-responsive projects-works"></a>
 
-          <a href="https://codepen.io/iamanadia/full/MOGBRb/"><img src="images/works-colour/quoteSite.PNG" alt="Link to website to randomly generate quotes" class="img-responsive projects-works"></a>
+          <a href="https://codepen.io/iamanadia/full/MOGBRb/" target="_blank"><img src="images/works-colour/quoteSite.PNG" alt="Link to website to randomly generate quotes" class="img-responsive projects-works"></a>
           
         </div><!-- div 6 columns -->
         <div class="col-md-6">
@@ -93,9 +93,9 @@
           <!-- projects content for Zoo Peru website -->
           <a href="#"><img src="images/works-colour/zooPeruSite.jpg" alt="Image of website for the company Zoo Peru" class="img-responsive projects-works"></a>
           
-          <a href="https://nadclputri.github.io/rock-paper-scissors/"><img src="images/works-colour/gameSite.PNG" alt="Link to website to play rock, paper, scissors" class="img-responsive projects-works"></a>
+          <a href="https://nadclputri.github.io/rock-paper-scissors/" target="_blank"><img src="images/works-colour/gameSite.PNG" alt="Link to website to play rock, paper, scissors" class="img-responsive projects-works"></a>
 
-          <a href="https://nadclputri.github.io/etch-a-sketch/"><img src="images/works-colour/sketchSite.PNG" alt="Link to website of simplified version of etch-a-sketch" class="img-responsive projects-works"></a>
+          <a href="https://nadclputri.github.io/etch-a-sketch/" target="_blank"><img src="images/works-colour/sketchSite.PNG" alt="Link to website of simplified version of etch-a-sketch" class="img-responsive projects-works"></a>
 
         </div> <!-- div 6 columns -->
       </div> <!-- projects container -->
