--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 
           <div class="col-md-6">
             <p>I'm Nadia Putri.</p>
-            <p>I am an international student, currently a Master of IT student at UWA. My bachelor degree was in web design.</p>
-            <p>My passion includes coding and volunteering. I also love to learn, and am always looking for an opportunity to expand my skills.</p>
+            <p>I am an IT graduate, with a Master of IT degree from UWA, and a bachelor degree in Digital Design from Curtin University.</p>
+            <p>My passion includes coding and volunteering. In the past, I have volunteered as an IT tutor for seniors at Claremont Library. I also love to learn, and am always looking for an opportunity to expand my skills.</p>
             <p>Technical Skills:</p>
             <ul>
               <li class="about">Experience with HTML and CSS</li>
